src/test/ui/proc-macro/resolve-error.stderr
error[E0658]: The attribute `attr_proc_macra` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/resolve-error.rs:27:3
   |
LL | #[attr_proc_macra]
   |   ^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `FooWithLongNan` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/resolve-error.rs:31:3
   |
LL | #[FooWithLongNan]
   |   ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: cannot find derive macro `FooWithLongNan` in this scope
  --> $DIR/resolve-error.rs:22:10
   |
LL | #[derive(FooWithLongNan)]
   |          ^^^^^^^^^^^^^^ help: try: `FooWithLongName`

error: cannot find derive macro `Dlone` in this scope
  --> $DIR/resolve-error.rs:34:10
   |
LL | #[derive(Dlone)]
   |          ^^^^^ help: try: `Clone`

error: cannot find derive macro `Dlona` in this scope
  --> $DIR/resolve-error.rs:38:10
   |
LL | #[derive(Dlona)]
   |          ^^^^^ help: try: `Clona`

error: cannot find derive macro `attr_proc_macra` in this scope
  --> $DIR/resolve-error.rs:42:10
   |
LL | #[derive(attr_proc_macra)]
   |          ^^^^^^^^^^^^^^^

error: cannot find macro `FooWithLongNama!` in this scope
  --> $DIR/resolve-error.rs:47:5
   |
LL |     FooWithLongNama!();
   |     ^^^^^^^^^^^^^^^ help: you could try the macro: `FooWithLongNam`

error: cannot find macro `attr_proc_macra!` in this scope
  --> $DIR/resolve-error.rs:50:5
   |
LL |     attr_proc_macra!();
   |     ^^^^^^^^^^^^^^^ help: you could try the macro: `attr_proc_mac`

error: cannot find macro `Dlona!` in this scope
  --> $DIR/resolve-error.rs:53:5
   |
LL |     Dlona!();
   |     ^^^^^

error: cannot find macro `bang_proc_macrp!` in this scope
  --> $DIR/resolve-error.rs:56:5
   |
LL |     bang_proc_macrp!();
   |     ^^^^^^^^^^^^^^^ help: you could try the macro: `bang_proc_macro`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0658`.
